# DrawingBoardApplication

./: CMakeLists.txt  DrawingBoardApplication.sln
Dependencies/LIBS/: glfw3.lib
Dependencies/include/glad/: glad.h
Dependencies/src/: glad.c
DrawingBoardApplication/: App.cpp  App.h  Core.cpp  Core.h  DrawObject.cpp  DrawObject.h  DrawingBoardApplication.cpp  DrawingBoardApplication.vcxproj  DrawingBoardApplication.vcxproj.filters  ObjModel.cpp  ObjModel.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  imgui.ini
DrawingBoardApplication/Assets/: 8.mtl
DrawingBoardApplication/Imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
DrawingBoardApplication/Objects/: Circle.cpp  Circle.h  Line.cpp  Line.h  Square.cpp  Square.h
DrawingBoardApplication/Shader/: DrawObj.frag  DrawObj.vert
